<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="36dp"
        android:tint="#ffffff"
        app:srcCompat="@drawable/ic_park" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:textColor="#ffffff"
        android:textColorHint="#aaffffff"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:textColor="#ffffff"
        android:textColorHint="#aaffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forgotPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:text="@string/forgot_pw"
        android:textAlignment="viewEnd"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button_background"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:text="@string/sign_in"
        android:textColor="#356b9c"
        android:textSize="14sp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/rounded_button_outline_background"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="14sp" />

</LinearLayout>